--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Hello, World!</h1>
+<html>
+<head>
+    <title>Dream Tech</title>
+</head>
+
+<body>
+    <h1>DREAM TECH</h1>
+    <p>Hello World, and welcome to Dream Tech. We dont just live it, we dream it.</p>
+    <a href="https://www.youtube.com/watch?v=0me3guauqOU">This is a link</a>
+</body>
+
+</html>
