--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 <body>
     <h1>DREAM TECH</h1>
     <p>Hello World, and welcome to Dream Tech. We dont just live it, we dream it.</p>
-    <a href="https://www.youtube.com/watch?v=0me3guauqOU">This is a link</a>
+    <a href="https://www.youtube.com/watch?v=LD24TG33w2E"> Blue</a>
+
+    <a href="https://www.youtube.com/watch?v=0me3guauqOU"> Red</a>
+    <br>
+    <img src="red_blue_pill.gif" width="1920" height="1080">
 </body>
 
 </html>
