Company Motto Change

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <body>
     <h1>DREAM TECH</h1>
-    <p>Hello World, and welcome to Dream Tech. We dont just live it, we dream it.</p>
+    <p>Hello World, and welcome to Dream Tech. We dont just dream it, we live it.</p>
     <a href="https://www.youtube.com/watch?v=LD24TG33w2E"> Blue</a>
 
     <a href="https://www.youtube.com/watch?v=FP4WfEJo9eA"> Red</a>
