--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <html>
 <head>
     <title>DreamZ</title>
+    <style>
+        body {background-color: black;}
+        h1 {color: white;}
+        p {color: white;}
+    </style>
 </head>
 
 <body>
     <h1>DREAM TECH</h1>
     <p>Hello World, and welcome to Dream Tech. We dont just dream it, we live it.</p>
-    <a href="https://www.youtube.com/watch?v=LD24TG33w2E"> Blue</a>
-
-    <a href="https://www.youtube.com/watch?v=FP4WfEJo9eA"> Red</a>
     <br>
-    <img src="red_blue_pill.gif" width="1920" height="1080">
+    <p1>
+        <a href="blue.html" style="color: blue;">Blue </a>
+    
+        <a href="https://www.youtube.com/watch?v=FP4WfEJo9eA" style="color: red;">Red </a>
+    </p1>
+    <br>
+    <img src="red_blue_pill.gif" width="1920" height="1080" alt="Choose a pill">
 </body>
 
 </html>
