--- a/blue.html
+++ b/blue.html
@@ -2,8 +2,12 @@
     <head>
         <title>Blue Pill</title>
         <style>
-            body {background-color: rgb(1, 48, 255);}
-            h1 {color: black;}
+            body {background-color: black;
+                    background-image: url("ranch.jpg");
+                    background-repeat: no-repeat;
+                    background-attachment: fixed;
+                    background-size: cover;}
+            h1 {color: white;}
             p {color:white;}
         </style>
     </head>
