--- a/index.html
+++ b/index.html
@@ -2,21 +2,34 @@
 <head>
     <title>DreamZ</title>
     <style>
-        body {background-color: black;}
-        h1 {color: white;}
-        p {color: white;}
+        body {background-color: black;
+                background-image: url("cybertech.jpg");
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-attachment: fixed;}
+        h1 {color: rgb(255, 230, 0);
+            text-align: center;
+            font-family: monospace;
+            font-size: 400%;}
+        h2 {color: white;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 100%;
+            text-align: center;}
+        p {color: white;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 175%;}
     </style>
 </head>
 
 <body>
     <h1>DREAM TECH</h1>
-    <p>Hello World, and welcome to Dream Tech. We dont just dream it, we live it.</p>
+    <h2>Hello World, and welcome to Dream Tech. We dont just dream it, we live it.</h2>
     <br>
-    <p1>
+    <p>
         <a href="blue.html" style="color: blue;">Blue </a>
     
-        <a href="https://www.youtube.com/watch?v=FP4WfEJo9eA" style="color: red;">Red </a>
-    </p1>
+        <a href="https://www.youtube.com/watch?v=FP4WfEJo9eA" style="color: red; float: right;">Red </a>
+    </p>
     <br>
     <img src="red_blue_pill.gif" width="1920" height="1080" alt="Choose a pill">
 </body>
