Style and Formatting
-learned to add iframe
-iframe formatting
-embed videos

--- a/blue.html
+++ b/blue.html
@@ -15,6 +15,13 @@
     <body>
         <h1><strong>Welcome</strong></h1>
         <p>You have chosen the blue pill and entered The Ranch.</p>
+        <iframe width="560" height="315" 
+                src="https://www.youtube.com/embed/LD24TG33w2E" 
+                title="Ram Ranch" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+            </iframe>
     </body>
 
 </html>
