--- a/blue.html
+++ b/blue.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Blue Pill</title>
+        <title>Rancher Pill</title>
         <style>
             body {background-color: black;
                     background-image: url("ranch.jpg");
