--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p>
         <a href="blue.html" style="color: blue;">Blue </a>
     
-        <a href="https://www.youtube.com/watch?v=FP4WfEJo9eA" style="color: red; float: right;">Red </a>
+        <a href="red.html" style="color: red; float: right;">Red </a>
     </p>
     <br>
     <img src="red_blue_pill.gif" width="1920" height="1080" alt="Choose a pill">
