--- a/blue.html
+++ b/blue.html
@@ -15,13 +15,13 @@
     <body>
         <h1><strong>Welcome</strong></h1>
         <p>You have chosen the blue pill and entered The Ranch.</p>
-        <iframe width="560" height="315" 
-                src="https://www.youtube.com/embed/LD24TG33w2E" 
-                title="Ram Ranch" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/47cAxRX3aDg"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
-            </iframe>
+        </iframe>
     </body>
 
 </html>
